# tts-dataset-gen

./: .env.example  .gitignore  README.md  chunk_pipeline.py  create_dataset.py  downloader.py  pyproject.toml  raw_to_chunks.py  requirements.txt  s3_utils.py  transcribe_pipeline.py  transcriber.py
projects/sidbi-ziri/: config.yaml
tts_dataset_gen/: s3_utils.py  segmenter.py
